--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #511eb4; }
+  background: #d7cc20; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #cb89aa; }
+  background: #999e09; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #06018b; }
+  background: #e6d468; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b8ec96; }
+  background: #e8d136; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #fc0251; }
+  background: #65cb6a; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f23b98; }
+  background: #fa24f0; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f23fe0; }
+  background: #f8be91; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #64d03f; }
+  background: #a78135; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #789e89; }
+  background: #0a8b86; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #0f2744; }
+  background: #27b7bf; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #5e8ed0; }
+  background: #eb8c88; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d91c3f; }
+  background: #0ab4c0; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c33bd7; }
+  background: #51269f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e2c4f3; }
+  background: #dcbbf9; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a7f288; }
+  background: #bdae06; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c366b4; }
+  background: #ce8323; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #665823; }
+  background: #de0f9c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #dbdbec; }
+  background: #99124a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8a8313; }
+  background: #a6f8fc; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e15031; }
+  background: #60828c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a6a55b; }
+  background: #1ecaf3; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #fd74bb; }
+  background: #33d367; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #ce3902; }
+  background: #37bfe7; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4b68c9; }
+  background: #ba0755; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #b365ca; }
+  background: #e5cf99; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #8698f2; }
+  background: #47704e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #46e40f; }
+  background: #065de7; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7f08cf; }
+  background: #381fe3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #392767; }
+  background: #8a8aa6; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #274f48; }
+  background: #72b9c8; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5f5015; }
+  background: #2cf11a; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #9d3464; }
+  background: #dcef0d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #9de229; }
+  background: #c1ded6; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f2e74f; }
+  background: #97218c; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e7f160; }
+  background: #154372; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #996511; }
+  background: #b3a77c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2c0fc3; }
+  background: #54c626; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #7e4120; }
+  background: #e22fc5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0bb0d6; }
+  background: #60de15; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #71d04f; }
+  background: #4e6a47; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8dbc92; }
+  background: #12cbe5; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #72bb69; }
+  background: #fc0c24; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a0b0d4; }
+  background: #981295; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #fba121; }
+  background: #89cbde; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #075277; }
+  background: #f82641; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #20cc5c; }
+  background: #5d4340; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #77cc3e; }
+  background: #f03308; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5de5de; }
+  background: #25773f; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #d45252; }
+  background: #dae794; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #5912ce; }
+  background: #d62f9f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #3749af; }
+  background: #ffba97; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #451c23; }
+  background: #360c51; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #d38714; }
+  background: #2fcd36; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a08291; }
+  background: #f67cda; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #2e9d2d; }
+  background: #558524; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #f9d792; }
+  background: #6dd4a9; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #37d3b5; }
+  background: #e1598a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #5272b9; }
+  background: #98dc84; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a50e1b; }
+  background: #f07b58; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4f8291; }
+  background: #c6e957; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #f71081; }
+  background: #f0ee81; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #1364eb; }
+  background: #d97472; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #56ff09; }
+  background: #2835e5; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #ad0621; }
+  background: #d24fcb; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d0e971; }
+  background: #bd239e; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ac6da8; }
+  background: #668b48; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #eec28e; }
+  background: #e874e0; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #270402; }
+  background: #0b58e8; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5af4cc; }
+  background: #0d973a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #486191; }
+  background: #ea2dd0; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #2c95b1; }
+  background: #25527f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #2f40b8; }
+  background: #3c6a61; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d7474e; }
+  background: #64fdd8; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #38d1a6; }
+  background: #acde0a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e5d265; }
+  background: #e2142c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #16acf7; }
+  background: #7c3240; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #37915e; }
+  background: #01b3b8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #731e6a; }
+  background: #0d84e8; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7e4b4b; }
+  background: #c45b5c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c3a997; }
+  background: #e138a2; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c677d3; }
+  background: #b98702; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #7b9e09; }
+  background: #1d30f3; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #746336; }
+  background: #b71a76; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #fa58ad; }
+  background: #d266b0; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #39e9ab; }
+  background: #7a8699; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #91524c; }
+  background: #f2e06c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #378db0; }
+  background: #881d70; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d0c5ab; }
+  background: #718662; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #2e60a7; }
+  background: #7bdf39; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #dfddf5; }
+  background: #b266ef; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1e6819; }
+  background: #d69911; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #83099a; }
+  background: #8e494f; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #18b352; }
+  background: #414ac4; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c9cb7f; }
+  background: #395f73; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #21ebc9; }
+  background: #5056ad; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #549d7d; }
+  background: #6e032a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #fee55c; }
+  background: #da84d4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b982ba; }
+  background: #db0fe4; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0eff49; }
+  background: #4ea261; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #2bfe99; }
+  background: #cdf823; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16323,6 +16323,11 @@ option {
   .summary-box img {
     width: 18px; }
 
+.summary-box-unselect {
+  background: #fff;
+  border-top: 0px solid #4c4c4c;
+  border-bottom: 1px solid #4c4c4c; }
+
 .tabs-flow-main-header-row {
   /* overflow-x: scroll; */
   display: grid;
@@ -16362,17 +16367,23 @@ option {
   .main-summary-tabs-flow .mCSB_dragger_bar {
     margin: 10px auto !important; }
 
-.events-policy-tabs {
+.main-summary-tabs-flow-right-text {
   overflow-x: scroll;
-  display: grid;
-  grid-auto-flow: column;
-  grid-gap: 15px;
+  display: flex;
   overflow-y: hidden;
   scroll-behavior: smooth;
+  background: #f6f6f6;
+  justify-content: flex-start;
   align-items: center;
-  padding: 0px 5px;
-  position: relative;
-  justify-content: space-around; }
+  width: 100%;
+  direction: rtl !important; }
+
+.events-policy-tabs {
+  display: grid;
+  grid-auto-flow: column;
+  overflow-y: hidden;
+  align-items: center;
+  position: relative; }
   .events-policy-tabs::before {
     content: "";
     position: absolute;
