--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d7cc20; }
+  background: #fb4fb4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #999e09; }
+  background: #6606f3; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e6d468; }
+  background: #9dd565; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e8d136; }
+  background: #591c2e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #65cb6a; }
+  background: #0f6405; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #fa24f0; }
+  background: #765ec4; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f8be91; }
+  background: #12faee; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a78135; }
+  background: #b2e402; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #0a8b86; }
+  background: #4a473e; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #27b7bf; }
+  background: #720967; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #eb8c88; }
+  background: #fd587b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0ab4c0; }
+  background: #98332e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #51269f; }
+  background: #ffa8cc; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #dcbbf9; }
+  background: #664a52; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #bdae06; }
+  background: #3b62f8; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ce8323; }
+  background: #f7cf05; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #de0f9c; }
+  background: #df3ac5; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #99124a; }
+  background: #ff2f62; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a6f8fc; }
+  background: #d8bb4c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #60828c; }
+  background: #8cd518; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1ecaf3; }
+  background: #ff23f2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #33d367; }
+  background: #82300a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #37bfe7; }
+  background: #fc370b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ba0755; }
+  background: #0869be; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e5cf99; }
+  background: #f859a1; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #47704e; }
+  background: #28701e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #065de7; }
+  background: #1fc6d1; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #381fe3; }
+  background: #b72f6e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8a8aa6; }
+  background: #f99c6c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #72b9c8; }
+  background: #503727; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2cf11a; }
+  background: #b1721e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #dcef0d; }
+  background: #3a896d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c1ded6; }
+  background: #d8cc9e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #97218c; }
+  background: #cafbc1; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #154372; }
+  background: #4950da; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b3a77c; }
+  background: #cb538c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #54c626; }
+  background: #9bb241; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e22fc5; }
+  background: #9347a6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #60de15; }
+  background: #3ad8b0; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #4e6a47; }
+  background: #475713; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #12cbe5; }
+  background: #3b9692; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #fc0c24; }
+  background: #91a132; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #981295; }
+  background: #06cbad; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #89cbde; }
+  background: #368b7a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #f82641; }
+  background: #d6ceda; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5d4340; }
+  background: #dd0505; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f03308; }
+  background: #075f24; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #25773f; }
+  background: #49fe4c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #dae794; }
+  background: #eabf42; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #d62f9f; }
+  background: #f20f81; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ffba97; }
+  background: #3c49e3; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #360c51; }
+  background: #672433; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2fcd36; }
+  background: #8e7a0b; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f67cda; }
+  background: #2f87a4; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #558524; }
+  background: #63d28f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6dd4a9; }
+  background: #e3b2e4; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #e1598a; }
+  background: #6c1cb0; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #98dc84; }
+  background: #8d098c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f07b58; }
+  background: #290216; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c6e957; }
+  background: #ef93a5; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #f0ee81; }
+  background: #c9ccde; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d97472; }
+  background: #40d371; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #2835e5; }
+  background: #197589; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d24fcb; }
+  background: #3fa52a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #bd239e; }
+  background: #d18b38; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #668b48; }
+  background: #b434ca; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e874e0; }
+  background: #6febfb; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0b58e8; }
+  background: #35787b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0d973a; }
+  background: #a38848; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ea2dd0; }
+  background: #a75bfa; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #25527f; }
+  background: #e7345e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #3c6a61; }
+  background: #554229; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #64fdd8; }
+  background: #62415e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #acde0a; }
+  background: #c491a0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e2142c; }
+  background: #02c0b6; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7c3240; }
+  background: #17ccd1; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #01b3b8; }
+  background: #6777a2; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0d84e8; }
+  background: #db6938; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #c45b5c; }
+  background: #337dd6; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e138a2; }
+  background: #c3cea8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b98702; }
+  background: #641f62; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1d30f3; }
+  background: #d8e315; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b71a76; }
+  background: #fa0509; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d266b0; }
+  background: #b8eb8c; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7a8699; }
+  background: #60ddb4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f2e06c; }
+  background: #45c7f0; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #881d70; }
+  background: #691c86; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #718662; }
+  background: #4a76c9; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7bdf39; }
+  background: #eb88d3; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #b266ef; }
+  background: #e60ed6; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d69911; }
+  background: #335dd5; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8e494f; }
+  background: #7c04cc; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #414ac4; }
+  background: #d17593; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #395f73; }
+  background: #4cbd20; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5056ad; }
+  background: #f8d04c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6e032a; }
+  background: #4c7c48; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #da84d4; }
+  background: #2ef58e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #db0fe4; }
+  background: #95962a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4ea261; }
+  background: #b8f6bf; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cdf823; }
+  background: #6e0dba; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -13817,7 +13817,7 @@ input:checked + .sliders:before {
 
 .modal-add-connections-wrapper .adding-adapter-modal-header {
   border-bottom: 1px solid #dcdde1;
-  padding: 12px 25px; }
+  padding: 20px 25px 15px; }
 
 .modal-add-connections-wrapper .modal-close-btn {
   position: inherit;
@@ -16310,22 +16310,23 @@ option {
 
 .grid-box-tabs-flow {
   display: grid;
-  grid-template-columns: auto 170px;
+  grid-template-columns: auto 154px;
   border-bottom: 1px solid #808285; }
 
-.summary-box {
+.summary-box, .summary-box:hover {
   background: #f6f6f6;
   border-top: 1px solid #4c4c4c;
   justify-content: center;
   align-items: center;
   display: flex;
-  height: 100%; }
-  .summary-box img {
+  height: 100%;
+  cursor: pointer; }
+  .summary-box img, .summary-box:hover img {
     width: 18px; }
 
 .summary-box-unselect {
   background: #fff;
-  border-top: 0px solid #4c4c4c;
+  border-top: 1px solid #fff;
   border-bottom: 1px solid #4c4c4c; }
 
 .tabs-flow-main-header-row {
@@ -16337,7 +16338,8 @@ option {
   scroll-behavior: smooth; }
   .tabs-flow-main-header-row .mCustomScrollBox {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr)); }
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+    height: 47px !important; }
 
 .main-summary-tabs-flow {
   overflow-x: scroll;
@@ -16392,15 +16394,16 @@ option {
     height: 24px; }
   .events-policy-tabs a {
     text-align: center;
-    padding: 6px 14px; }
-  .events-policy-tabs a.active {
-    background: #f6f6f6;
-    border-top: 1px solid #4c4c4c;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 100%;
-    position: relative; }
+    padding: 10px 14px;
+    border-top: 1px solid #fff; }
+    .events-policy-tabs a img {
+      width: 23px; }
+    .events-policy-tabs a .active, .events-policy-tabs a:hover {
+      background: #f6f6f6;
+      padding: 10px 14px;
+      border-top: 1px solid #4c4c4c;
+      height: auto;
+      position: relative; }
 
 .tabs-flowing-box {
   display: grid;
@@ -16416,7 +16419,7 @@ option {
     height: 100%; }
     .tabs-flowing-box .grid-box-tabs-flow ul .nav-item a img {
       width: 30px; }
-  .tabs-flowing-box .grid-box-tabs-flow ul .active {
+  .tabs-flowing-box .grid-box-tabs-flow ul .active, .tabs-flowing-box .grid-box-tabs-flow ul .nav-item:hover {
     background: #f6f6f6;
     border-top: 1px solid #4c4c4c;
     justify-content: center;
@@ -16424,7 +16427,7 @@ option {
     display: flex;
     height: 100%;
     position: relative; }
-    .tabs-flowing-box .grid-box-tabs-flow ul .active::before {
+    .tabs-flowing-box .grid-box-tabs-flow ul .active::before, .tabs-flowing-box .grid-box-tabs-flow ul .nav-item:hover::before {
       content: "";
       position: absolute;
       width: 100%;
